--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,14 @@ categories = ["hardware-support"]
 description  = "Roccat Vulcan keyboard illumination API"
 keywords  = ["roccat", "vulcan", "keyboard", "lighting", "api"]
 
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+serde-serialize = ["serde"]
+default = ["serde-serialize"]
 
 [dependencies]
 hidapi = "1.2.5"
+serde = { version = "1.0", features = ["derive"], optional = true }
 
 [dev-dependencies]
 once_cell = "1.5.2"
+version-sync = "0.9.2"
