--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -12,6 +12,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Install libhidapi
+        run: sudo apt install libhidapi-dev libusb-1.0-0-dev
+
       - name: Install Rust nightly toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -24,11 +27,12 @@ jobs:
         run: curl -L https://github.com/mozilla/grcov/releases/latest/download/grcov-linux-x86_64.tar.bz2 | tar jxf -
 
       - name: Generate code coverage
+        continue-on-error: true
         run: |
           export RUSTFLAGS="-Zinstrument-coverage"
           export RUSTDOCFLAGS="-Zinstrument-coverage -Zunstable-options --persist-doctests target/debug/doctestbins"
-          cargo +nightly build --verbose --all --features="no-overflow-test","serde-serialize"
-          LLVM_PROFILE_FILE="roccat-vulcan-api-rs-%p-%m.profraw" cargo +nightly test --verbose --features="no-overflow-test","serde-serialize" --workspace --exclude lattice_qcd_rs-procedural_macro
+          cargo +nightly build --verbose --all --features="no-keyboard-test","serde-serialize" --no-fail-fast
+          LLVM_PROFILE_FILE="roccat-vulcan-api-rs-%p-%m.profraw" cargo +nightly test --verbose --features="no-keyboard-test","serde-serialize" --all
 
       - name: parse code coverage
         run: ./grcov . --binary-path ./target/debug/ -s . -t lcov --branch --ignore-not-existing --ignore "/*" -o lcov.info
