--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,24 +15,27 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest] # windows-latest
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
     
+    - name: Install libhidapi
+      run: sudo apt install libhidapi-dev libusb-1.0-0-dev
+
     - name: Install Rust stable toolchain
       uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
     
     - name: Build with serd
-      run: cargo build --all --verbose --features serde-serialize
+      run: cargo build --all --verbose --features="serde-serialize"
       
     - name: Run tests with serd
-      run: cargo test --all --verbose --features serde-serialize
+      run: cargo test --all --verbose --features="no-keyboard-test","serde-serialize"
     
     - name: Build no features
       run: cargo build --all --verbose --no-default-features
       
     - name: Run tests no features
-      run: cargo test --all --verbose --no-default-features
+      run: cargo test --all --verbose --no-default-features --features="no-keyboard-test"
