--- a/.github/workflows/rust_beta.yml
+++ b/.github/workflows/rust_beta.yml
@@ -16,19 +16,22 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
     
+    - name: Install libhidapi
+      run: sudo apt install libhidapi-dev libusb-1.0-0-dev
+
     - name: Install Rust beta toolchain
       uses: actions-rs/toolchain@v1
       with:
         toolchain: beta
     
     - name: Build beta with serd
-      run: cargo build --all --verbose --features serde-serialize
+      run: cargo build --all --verbose --features="serde-serialize"
     
     - name: Run tests beta with serd
-      run: cargo test --all --verbose --features serde-serialize
+      run: cargo test --all --verbose --features="no-keyboard-test","serde-serialize"
     
     - name: Build beta no features
       run: cargo build --all --verbose --no-default-features
       
     - name: Run tests beta no features
-      run: cargo test --all --verbose --no-default-features
+      run: cargo test --all --verbose --no-default-features --features="no-keyboard-test"
