--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "roccat-vulcan-api-rs"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["ChickenStorm <tetras.aigle@yahoo.fr>"]
 edition = "2018"
 readme = "README.md"
@@ -22,3 +22,9 @@ serde = { version = "1.0", features = ["derive"], optional = true }
 [dev-dependencies]
 once_cell = "1.5.2"
 version-sync = "0.9.2"
+criterion = "0.3.4"
+rand = "0.8.4"
+
+[[bench]]
+name = "bench"
+harness = false
