--- a/.github/workflows/fmt.yml
+++ b/.github/workflows/fmt.yml
@@ -18,11 +18,11 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
     
-    - name: Install Rust stable toolchain
+    - name: Install Rust nightly toolchain
       uses: actions-rs/toolchain@v1
       with:
-        toolchain: stable
+        toolchain: nightly
         components: rustfmt,
     
     - name: fmt
-      run: cargo fmt --all -- --check
+      run: cargo +nightly fmt --all -- --check
